[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/book.gd" type="Script" id=1]
[ext_resource path="res://animations/close_window.tres" type="Animation" id=2]
[ext_resource path="res://animations/open_window.tres" type="Animation" id=3]
[ext_resource path="res://images/board_bg.png" type="Texture" id=4]
[ext_resource path="res://images/window_header.png" type="Texture" id=5]
[ext_resource path="res://fonts/window_title.font" type="BitmapFont" id=6]
[ext_resource path="res://scripts/scroll_container.gd" type="Script" id=7]
[ext_resource path="res://images/close_window.png" type="Texture" id=8]
[ext_resource path="res://images/close_window_pressed.png" type="Texture" id=9]

[node name="excuses" type="Node2D"]

pause_mode = 2
z_index = 1
script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = ExtResource( 2 )
anims/open = ExtResource( 3 )
blend_times = [  ]

[node name="clickable_space" type="Button" parent="." index="1"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -540.0
margin_top = -2400.0
margin_right = 540.0
margin_bottom = 2400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="window" type="Node2D" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )

[node name="non_clickable_space" type="Control" parent="window" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -516.0
margin_top = -519.0
margin_right = 517.0
margin_bottom = 1015.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="background" type="Sprite" parent="window" index="1"]

modulate = Color( 0.589844, 0.589844, 0.589844, 1 )
position = Vector2( 0, 249.784 )
scale = Vector2( 1.11126, 1.20775 )
texture = ExtResource( 4 )

[node name="title " type="Node2D" parent="window" index="2"]

position = Vector2( -174, -437 )

[node name="header" type="Sprite" parent="window/title " index="0"]

position = Vector2( 167.088, -83.6848 )
texture = ExtResource( 5 )

[node name="label" type="Label" parent="window/title " index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -56.0
margin_top = -127.0
margin_right = 459.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "Excuse list"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="scroll_container" type="ScrollContainer" parent="window" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -504.0
margin_top = -311.0
margin_right = 546.0
margin_bottom = 893.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
script = ExtResource( 7 )

[node name="vbox_container" type="VBoxContainer" parent="window/scroll_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 200
alignment = 0

[node name="close_button" type="TextureButton" parent="window" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_top = -530.0
margin_right = 607.0
margin_bottom = -305.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]

[connection signal="pressed" from="clickable_space" to="." method="_on_clickable_space_pressed"]

[connection signal="pressed" from="window/close_button" to="." method="_on_close_button_pressed"]


